--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,16 @@
 	<packaging>war</packaging>
 	<name>HelloSpring</name>
 
+	<distributionManagement>
+		<repository>
+			<uniqueVersion>false</uniqueVersion>
+			<id>corp1</id>
+			<name>Corporate Repository</name>
+			<url>http://localhost:8080/HelloSpring</url>
+			<layout>default</layout>
+		</repository>
+	</distributionManagement>
+	
 	<properties>
 		<failOnMissingWebXml>false</failOnMissingWebXml>
 		<maven.compiler.source>1.8</maven.compiler.source>
