--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<distributionManagement>
 		<repository>
 			<uniqueVersion>false</uniqueVersion>
-			<id>corp1</id>
+			<id>localhost</id>
 			<name>Corporate Repository</name>
 			<url>http://localhost:8080/HelloSpring</url>
 			<layout>default</layout>
